--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.android.volley:volley:1.1.1'
     //noinspection GradleCompatible,GradleCompatible
     compile 'com.android.support:cardview-v7:21.0.+'
