--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,12 +31,20 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.1'
     implementation 'androidx.navigation:navigation-ui:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+
+    compile 'com.getbase:floatingactionbutton:1.10.1'
+
+
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.android.volley:volley:1.1.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:27.1.1'
     //noinspection GradleCompatible,GradleCompatible
     compile 'com.android.support:cardview-v7:21.0.+'
     //noinspection GradleCompatible,GradleCompatible
